Rework Ui,styles and script.js

--- a/styles.css
+++ b/styles.css
@@ -2,39 +2,56 @@ html {
     font-family: Roboto, sans-serif;
 }
 
-.body {
-    height: 100vh;
-    width: 100vw;
+body {
+    height: 97vh;
+    width: 97vw;
     box-sizing: border-box;
+    background: #202020;
+    color: #FBC02D;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container {
+    height: 400px;
+    width: 500px;
     text-align: center;
+    background: #404040;
+    border-radius: 25px;
 }
 
 .imgContainer {
     display: flex;
-    gap: 25px;
+    gap: 35px;
     justify-content: center;
-    margin: 30px 0;
+    margin: 50px 0 15px 0;
 }
 
 .textContainer {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 40px;
+    font-size: 0.9em;
 }
 
-img {
-    border: 3px solid grey;
+button {
+    border: 3px solid #606060;
     border-radius: 10px;
     padding: 9px;;
-    transition: transform 0.2s;
+    font-size: 52px;
+    background: #606060;
 }
 
-img:hover  {
-    transform: scale(1.1);
+#playAgain {
+    font-size: 18px;
+    color: white;
+    margin: 15px;
+}
+
+button:hover  {
+    background: #808080;
     cursor: pointer;
 }
 
